--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "react-table": "^6.7.4",
+    "react-tagsinput": "^3.19.0",
     "redux": "^3.7.2"
   },
   "scripts": {
