--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "1.0.17",
     "react-table": "^6.7.4",
     "react-tagsinput": "^3.19.0",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2"
   },
   "scripts": {
